[gd_scene load_steps=42 format=3 uid="uid://n5tif21uvnb0"]

[ext_resource type="Texture2D" uid="uid://c31c46ydl6n1n" path="res://assets/01-walk/sprPWalkUnarmed2_strip8.png" id="1_3d1yx"]
[ext_resource type="Script" path="res://player.gd" id="1_o2e8q"]
[ext_resource type="Texture2D" uid="uid://6q24m4anvww1" path="res://assets/03-death/sprPBackCut_strip3.png" id="2_7b72u"]
[ext_resource type="Texture2D" uid="uid://bl6ovuagjbjma" path="res://assets/03-death/sprPBackBlunt2_strip5.png" id="3_4mmk3"]
[ext_resource type="Texture2D" uid="uid://cao1e6gwhfj0v" path="res://assets/01-walk/sprPWalkAxe_strip8.png" id="3_iqdxn"]
[ext_resource type="Texture2D" uid="uid://b6uphbnvygx8y" path="res://assets/02-attack/sprPAttackAxe_strip7.png" id="4_ad7mk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g2n8u"]
atlas = ExtResource("1_3d1yx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lh2lh"]
atlas = ExtResource("1_3d1yx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jymen"]
atlas = ExtResource("1_3d1yx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5lbm"]
atlas = ExtResource("1_3d1yx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ays3l"]
atlas = ExtResource("1_3d1yx")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8qaq"]
atlas = ExtResource("1_3d1yx")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5qox"]
atlas = ExtResource("1_3d1yx")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuo30"]
atlas = ExtResource("1_3d1yx")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtdll"]
atlas = ExtResource("3_iqdxn")
region = Rect2(0, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuybi"]
atlas = ExtResource("3_iqdxn")
region = Rect2(44, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmg3y"]
atlas = ExtResource("3_iqdxn")
region = Rect2(88, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_hridh"]
atlas = ExtResource("3_iqdxn")
region = Rect2(132, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_cg1f2"]
atlas = ExtResource("3_iqdxn")
region = Rect2(176, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkao5"]
atlas = ExtResource("3_iqdxn")
region = Rect2(220, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_oon27"]
atlas = ExtResource("3_iqdxn")
region = Rect2(264, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ane4y"]
atlas = ExtResource("3_iqdxn")
region = Rect2(308, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_odkoo"]
atlas = ExtResource("4_ad7mk")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_g742l"]
atlas = ExtResource("4_ad7mk")
region = Rect2(60, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_enjiw"]
atlas = ExtResource("4_ad7mk")
region = Rect2(120, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gy5b"]
atlas = ExtResource("4_ad7mk")
region = Rect2(180, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_id1ia"]
atlas = ExtResource("4_ad7mk")
region = Rect2(240, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_08h0r"]
atlas = ExtResource("4_ad7mk")
region = Rect2(300, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_gevr0"]
atlas = ExtResource("4_ad7mk")
region = Rect2(360, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_irp4r"]
atlas = ExtResource("2_7b72u")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwbxv"]
atlas = ExtResource("2_7b72u")
region = Rect2(60, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_4utca"]
atlas = ExtResource("2_7b72u")
region = Rect2(120, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vpfc"]
atlas = ExtResource("3_4mmk3")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n4e6"]
atlas = ExtResource("3_4mmk3")
region = Rect2(60, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_eampj"]
atlas = ExtResource("3_4mmk3")
region = Rect2(120, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_sokli"]
atlas = ExtResource("3_4mmk3")
region = Rect2(180, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs80h"]
atlas = ExtResource("3_4mmk3")
region = Rect2(240, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbvje"]
atlas = ExtResource("1_3d1yx")
region = Rect2(0, 0, 28, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xrqnv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2n8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lh2lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jymen")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5lbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ays3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8qaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5qox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuo30")
}],
"loop": true,
"name": &"andando",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtdll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuybi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmg3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hridh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cg1f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkao5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oon27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ane4y")
}],
"loop": true,
"name": &"andandoMach",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_odkoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g742l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enjiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gy5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_id1ia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08h0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gevr0")
}],
"loop": true,
"name": &"golpeMach",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_irp4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwbxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4utca")
}],
"loop": false,
"name": &"morrendo1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vpfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n4e6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eampj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sokli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs80h")
}],
"loop": true,
"name": &"morrendo2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbvje")
}],
"loop": true,
"name": &"parado",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtdll")
}],
"loop": true,
"name": &"paradoMach",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h3fbs"]
size = Vector2(3, 4.8)

[sub_resource type="CircleShape2D" id="CircleShape2D_74k2d"]
radius = 5.2

[node name="player" type="CharacterBody2D" groups=["jogador"]]
scale = Vector2(5, 5)
script = ExtResource("1_o2e8q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.6, -0.4)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_xrqnv")
animation = &"golpeMach"
frame_progress = 0.440516

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.7, -0.6)
shape = SubResource("RectangleShape2D_h3fbs")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-1.4, 0.2)
shape = SubResource("CircleShape2D_74k2d")

[node name="deal_attack" type="Timer" parent="."]
wait_time = 0.46

[node name="cooldawn" type="Timer" parent="."]

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="timeout" from="deal_attack" to="." method="_on_deal_attack_timeout"]
